cassandra/3.1/modules/ROOT/pages/cassandra-connector-design-center.adoc
= Cassandra - Design Center Configuration - Mule 4
:page-aliases: connectors::cassandra/cassandra-connector-design-center.adoc

Design Center enables you to create apps visually.
To use Design Center, work with your Anypoint Platform administrator to ensure you have a xref:access-management::environments.adoc#to-create-a-new-environment[Design environment].

To create an app in Design Center:

* Configure the input source (trigger) for your app.
* Add the connector as a component to process the input for the app.

== Configure the Trigger

. In Design Center, click *Create*.
. Click *Create new application*.
. Specify a *Project name*.
. Click *Go straight to canvas* to exit from *Let's get started*.
. Click the trigger card.
. If you are using your connector as an input source trigger, search for the connector. Otherwise, search for HTTP or Scheduler.
. Proceed to configure your trigger. For more information, see the xref:cassandra-connector-reference.adoc[Cassandra Connector Reference].

Now you're ready to configure a component.

== Configure the Target Component

. Click *+* on the right of the trigger card.
. Search for the connector under the *Select a component* card.
. Create an HTTP element for the connector by setting these fields:

+

[%header%autowidth.spread]
|===
|Field |Description
|Protocol | Selected for the HTTP endpoint, it can be HTTP or HTTPS (secure).
|Host| The IP address where the Mule application listens for requests.
|Port| Address where the Mule application listens for requests.
|Base Path| Path where the Mule application listens for requests.
|===
. Select the plus sign to add a component.
. Select the connector as a component.
. Select the operation.
. Click the Cassandra connector to configure the host, port, keyspace, and authentication.

+

[%header%autowidth.spread]
|===
|Field |Description
|Host | Enter a host name or IP address of a Cassandra node.
|Port | Enter a port number. The default port is `9042`.
|Keyspace | Enter the Cassandra keyspace. A keyspace groups column families.
|Username | Enter a Cassandra user name, if you enabled the `PasswordAuthenticator` in the Cassandra YAML file. If `AllowAllAuthenticator` is enabled, leave this value blank.
|Password | Enter the password, if you enabled `PasswordAuthenticator`. Otherwise, leave this value blank.
|===

+

. Optionally, configure a connection to a Cassandra cluster.


[%header%autowidth.spread]
|===
|Field |Description
|Cluster name | The Cassandra cluster name.
|Protocol version | The version of the native protocol supported by the driver.
|Max schema agreement wait seconds | The maximum time to wait for a schema agreement before returning from a DDL query.
|Compression | The compression to use for the transport.
|SSL | Enable or disable the use of SSL for the cluster.
|===

After completing these steps, see the xref:cassandra-connector-examples.adoc[Cassandra Example] to experiment with the use cases described there.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
