cassandra/4.0/modules/ROOT/pages/cassandra-connector-design-center.adoc
= Use Flow Designer to Configure Cassandra Connector 4.0- Mule 4

Design Center enables you to create apps visually.
To use Design Center, work with your Anypoint Platform administrator to ensure you have a xref:access-management::environments.adoc#to-create-a-new-environment[Design environment].

To create an app in Design Center:

* Configure the source (trigger) for your app.
* Add the connector as a component to process the input for the app.

== Configure the Trigger

. In Design Center, click *Create*.
. Click *Create new application*.
. Specify a *Project name*.
. Click *Go straight to canvas* to exit from *Let's get started*.
. Click the trigger card.
. If you are using your connector as a source, search for the connector. Otherwise, search for `HTTP` or `Scheduler`.
. Proceed to configure your trigger. For more information, see the xref:cassandra-connector-reference.adoc[Cassandra Connector Reference].

Now you're ready to configure a component.

== Configure the Target Component

. Click *+* on the right of the trigger card.
. Search for the connector under the *Select a component* card.
. Create an HTTP element for the connector by setting these fields:
+
[%header,cols="30s,70a"]
|===
|Field |Description
|Protocol | HTTP or HTTPS (secure)
|Host| IP address where the Mule application listens for requests
|Port| Address where the Mule application listens for requests
|Base Path| Path where the Mule application listens for requests
|===
. Select *+* to add a component.
. Select the connector as a component.
. Select the operation.
. Click the Cassandra connector to configure the host, port, keyspace, and authentication:
+
[%header,cols="30s,70a"]
|===
|Field |Description
|Host | Enter a host name or IP address of a Cassandra node.
|Port | Enter a port number. The default port is `9042`.
|Keyspace | Enter the Cassandra keyspace. A keyspace groups column families.
|Username |  If you enabled the `PasswordAuthenticator` in the Cassandra YAML file, enter a Cassandra user name, If you enabled `AllowAllAuthenticator`,, leave this value blank.
|Password | Enter the password, If you enabled `PasswordAuthenticator`, enter the password. Otherwise, leave this value blank.
|===
+
. Optionally, configure a connection to a Cassandra cluster:
+
[%header,cols="30s,70a"]
|===
|Field |Description
|Cluster name | The Cassandra cluster name
|Protocol version | The version of the native protocol supported by the driver
|Max schema agreement wait seconds | The maximum time to wait for a schema agreement before returning from a DDL query
|Compression | The compression to use for the transport
|===
+
. Optionally, configure a connection that uses Mutual TLS by entering values for the fields on the Security tab:
+
[%header,cols="30s,70a"]
|===
|Field |Description
|Endpoint Identification Algorithm | The endpoint identification algorithm used by clients to validate server host name.The default value is an empty string, which means that the algorithm is disabled. Clients, including client connections created by the broker for inter-broker communication, verify that the broker host name matches the host name in the broker's certificate.
|TLS Configuration | Defines a configuration for TLS, which can be used from both the client and server sides to secure communication for the Mule app. When using the HTTPS protocol, the HTTP communication is secured using TLS or SSL. If HTTPS is configured as the protocol then, at a minimum, you must configure the keystore in the `tls:context` child element of the `listener-config`.
|===

After completing these steps, see the xref:cassandra-connector-examples.adoc[Examples] to experiment with the use cases described there.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
